syntax = "proto3";
package pocket.supplier;

import "cosmos_proto/cosmos.proto";
import "pocket/session/session.proto";

option go_package = "github.com/pokt-network/poktroll/x/supplier/types";

message Proof {
  string supplier_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // The session header of the session that this claim is for.
  session.SessionHeader session_header = 2;
  // The serialized SMST proof from the `#ClosestProof()` method.
  bytes closest_merkle_proof = 3;
}

